codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__worktrees_fork_choices.snap
---
source: tui/src/chatwidget/tests/worktree_picker_tests.rs
expression: popup
---
  Where should the forked conversation run?

› 1. Current checkout  Keep using the current working directory
  2. New worktree      Create an isolated managed checkout

  按  enter 确 认 ， 或 按  esc 返 回
